--- a/ventana2.html
+++ b/ventana2.html
@@ -24,10 +24,6 @@
             padding: 0;
         }
 
-        .selector {
-            padding-left: 32px;
-            font-size: small;
-        }
 
         th {
             color: white;
@@ -38,20 +34,9 @@
             background-color: #fff2de;
         }
 
-        .btn {
-            padding-top: 14px;
-            padding-bottom: 14px;
-            padding-right: -3px;
-        }
 
-        h5 {
-            margin-top: 2px;
 
-            padding-left: 15px;
-            font-size: small;
-        }
-
-        .chapa_patente{
+        .chapa_patente {
             margin-top: 10px;
             border: solid 1px black;
             margin-right: 50px;
@@ -78,7 +63,7 @@
                             <tr>
                                 <td style="width: 100%;">151891321698</td>
                                 <td style="width: 100%;">dfaasfdj561856asdasdasdasfas</td>
-                                <td style="width: 100%;">   14/08/2019   </td>
+                                <td style="width: 100%;"> 14/08/2019 </td>
                             </tr>
                         </tbody>
                     </table>
@@ -87,109 +72,104 @@
         </div>
         <hr>
         </hr>
-        <div class="row">
-                <div class="col-4">
-                    <h2>Repuestos</h2>
-                </div>
-                <div class="col-2">
-                    <h5>SELECCIONE</h5>
-                    <h5>PERIODO:</h5>
-                </div>
-                <div class="col-5 selector">
-                    <div class="row justify-content-center">
+        <div class="row justify-content-end">
+            <div class="col-2">
+                <h2>Repuestos</h2>
+            </div>
+            <div class="col-10">
+                <div class="row justify-content-end" style="margin-top: 13px; margin-bottom: 10px;">
+                    <div class="col-3" style="margin-top: 3px;">
+                        <h5>SELECCIONE PERIODO:</h5>
+                    </div>
+                    <div class="col-7" style="margin-right: -90px;">
                         Desde: <input type="date" id="bday" name="bday">
-                    </div>
-                    <div class="row justify-content-center">
                         Hasta: <input type="date" id="bday" name="bday">
+                        <button type="button" style="margin-top: -4px;background-color: #246355; color:white;"class="btn">Aplicar</button>
                     </div>
                 </div>
-                <div class="col-1">
-                    <button type="button" style="background-color: #246355"
-                        class="btn btn-success btn-sm">Aplicar</button>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <table class="table">
+                        <thead style="background-color: #246355;">
+                            <th style=" vertical-align: middle;">Codigo</th>
+                            <th style=" vertical-align: middle;">Descripción</th>
+                            <th>Fecha Ult. Factura</th>
+                            <th>N° Ult. Factura</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>156846</td>
+                                <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi eius
+                                    facilis
+                                    voluptatibus?</td>
+                                <td>14/08/2019</td>
+                                <td>12345</td>
+                            </tr>
+                            <tr>
+                                <td>156846</td>
+                                <td>Lorem ipsum dolor sit amet.</td>
+                                <td>14/08/2019</td>
+                                <td>12345</td>
+                            </tr>
+                            <tr>
+                                <td>156846</td>
+                                <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero, reiciendis!
+                                </td>
+                                <td>14/08/2019</td>
+                                <td>12345</td>
+                            </tr>
+                            <tr>
+                                <td>156846</td>
+                                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ipsam,
+                                    iste architecto
+                                    eum labore enim.</td>
+                                <td>14/08/2019</td>
+                                <td>12345</td>
+                            </tr>
+                            <tr>
+                                <td>156846</td>
+                                <td>Lorem ipsum dolor sit.</td>
+                                <td>14/08/2019</td>
+                                <td>12345</td>
+                            </tr>
+                            <tr>
+                                <td>156846</td>
+                                <td>Lorem, ipsum dolor.</td>
+                                <td>14/08/2019</td>
+                                <td>12345</td>
+                            </tr>
+                            <tr>
+                                <td>156846</td>
+                                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam consequatur
+                                    non
+                                    consectetur quia maxime dolorem, libero distinctio quas?</td>
+                                <td>14/08/2019</td>
+                                <td>12345</td>
+                            </tr>
+                            <tr>
+                                <td>156846</td>
+                                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga!</td>
+                                <td>14/08/2019</td>
+                                <td>12345</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <table class="table">
-                    <thead style="background-color: #246355;">
-                        <th style=" vertical-align: middle;">Codigo</th>
-                        <th style=" vertical-align: middle;">Descripción</th>
-                        <th>Fecha Ult. Factura</th>
-                        <th>N° Ult. Factura</th>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>156846</td>
-                            <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi eius
-                                facilis
-                                voluptatibus?</td>
-                            <td>14/08/2019</td>
-                            <td>12345</td>
-                        </tr>
-                        <tr>
-                            <td>156846</td>
-                            <td>Lorem ipsum dolor sit amet.</td>
-                            <td>14/08/2019</td>
-                            <td>12345</td>
-                        </tr>
-                        <tr>
-                            <td>156846</td>
-                            <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero, reiciendis!
-                            </td>
-                            <td>14/08/2019</td>
-                            <td>12345</td>
-                        </tr>
-                        <tr>
-                            <td>156846</td>
-                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ipsam,
-                                iste architecto
-                                eum labore enim.</td>
-                            <td>14/08/2019</td>
-                            <td>12345</td>
-                        </tr>
-                        <tr>
-                            <td>156846</td>
-                            <td>Lorem ipsum dolor sit.</td>
-                            <td>14/08/2019</td>
-                            <td>12345</td>
-                        </tr>
-                        <tr>
-                            <td>156846</td>
-                            <td>Lorem, ipsum dolor.</td>
-                            <td>14/08/2019</td>
-                            <td>12345</td>
-                        </tr>
-                        <tr>
-                            <td>156846</td>
-                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam consequatur
-                                non
-                                consectetur quia maxime dolorem, libero distinctio quas?</td>
-                            <td>14/08/2019</td>
-                            <td>12345</td>
-                        </tr>
-                        <tr>
-                            <td>156846</td>
-                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga!</td>
-                            <td>14/08/2019</td>
-                            <td>12345</td>
-                        </tr>
-                    </tbody>
-                </table>
             </div>
         </div>
-    </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
