--- a/ventana2.html
+++ b/ventana2.html
@@ -9,9 +9,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+      
 
     <title>TP diseño 2</title>
     <style type="text/css">
+
         .table {
             text-align: left;
             border-collapse: collapse;
@@ -42,11 +44,72 @@
             margin-right: 50px;
             padding: 10px;
         }
+                .overlayd {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    transition: opacity 20ms;
+    opacity: 0;
+}
+.overlayd:target {
+    z-index: 2;
+    visibility: visible;
+    opacity: 1;
+}
+#popup{
+    background: rgba(192, 192, 192, 0.7);
+    width: 100%;
+    height: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    transition: all 50ms ease-in-out;    
+}
+        .tabla_estados td {
+            background-color: #246355;color: white;
+            
+        }
+
+
     </style>
 </head>
 
-<body style="background: #f4f4f4;">
+<body style="background: #f4f4f4;z-index: -1;">
     <div class="container">
+
+                     <div id="popup" class="overlayd"  >
+                        <a  href="#" style="text-decoration: none">
+                                    <table class=" tabla_estados" style="margin-left: auto;margin-right: auto; margin-top: 15%">
+                        <tbody>
+                            <tr>
+                                <td>CODIGO REPUESTO</td>
+                                <td style="text-align: center; background-color: white;color: black;">153678</td>
+                            </tr>
+                            <tr>
+                                <td>Precio unitario ultima compra</td>
+                                <td style="text-align: center; background-color: white;color: black;">1</td>
+                            </tr>
+                            <tr>
+                                <td>Existencias cierre ultimo ejercio contable</td>
+                                <td style="text-align: center; background-color: white;color: black;">3</td>
+                            </tr>
+                            <tr>
+                                <td>Total unidades ingresadas</td>
+                                <td style="text-align: center; background-color: white;color: black;">1</td>
+                            </tr>
+                            <tr>
+                                <td>Existencia actual</td>
+                                <td style="text-align: center; background-color: white;color: black;">1</td>
+                            </tr>
+                            <tr>
+                                <td>Valor de la ultima compra</td>
+                                <td style="text-align: center; background-color: white;color: black;">3</td>
+                            </tr>
+                        </tbody>
+                    </table></a>
+            </div>
         <div class="row justify-content-between">
             <div class="col-4">
                 <h2 class="chapa_patente" style="background: #246355; color: white;">Chapa|Patente: 12245</h2>
@@ -92,16 +155,15 @@
         </div>
         <div class="row">
             <div class="col">
-                <table class="table">
+                 <table class="table">
                     <thead style="background-color: #246355;">
                         <th style=" vertical-align: middle;">Codigo</th>
                         <th style=" vertical-align: middle;">Descripción</th>
                         <th>Fecha Ult. Factura</th>
                         <th>N° Ult. Factura</th>
                     </thead>
-                    <tbody>
                         <tr>
-                            <td>156846</td>
+                            <td><a style="display:block;color: black" href="#popup"> 156846</a></td>
                             <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi eius
                                 facilis
                                 voluptatibus?</td>
@@ -109,40 +171,40 @@
                             <td>12345</td>
                         </tr>
                         <tr>
-                            <td>156846</td>
+                            <td><a style="display:block;color: black" href="#popup"> 156846</a></td>
                             <td>Lorem ipsum dolor sit amet.</td>
                             <td>14/08/2019</td>
                             <td>12345</td>
                         </tr>
                         <tr>
-                            <td>156846</td>
+                            <td><a style="display:block;color: black" href="#popup"> 156846</a></td>
                             <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero, reiciendis!
                             </td>
                             <td>14/08/2019</td>
                             <td>12345</td>
                         </tr>
                         <tr>
-                            <td>156846</td>
+                            <td><a style="display:block;color: black" href="#popup"> 156846</a></td>
                             <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ipsam,
                                 iste architecto
                                 eum labore enim.</td>
                             <td>14/08/2019</td>
                             <td>12345</td>
                         </tr>
-                        <tr>
-                            <td>156846</td>
+                        <tr> 
+                            <td><a style="display:block;color: black" href="#popup"> 156846</a></td>
                             <td>Lorem ipsum dolor sit.</td>
                             <td>14/08/2019</td>
                             <td>12345</td>
                         </tr>
                         <tr>
-                            <td>156846</td>
+                            <td><a style="display:block;color: black" href="#popup"> 156846</a></td>
                             <td>Lorem, ipsum dolor.</td>
                             <td>14/08/2019</td>
                             <td>12345</td>
                         </tr>
                         <tr>
-                            <td>156846</td>
+                            <td><a style="display:block;color: black" href="#popup"> 156846</a></td>
                             <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam consequatur
                                 non
                                 consectetur quia maxime dolorem, libero distinctio quas?</td>
@@ -150,15 +212,21 @@
                             <td>12345</td>
                         </tr>
                         <tr>
-                            <td>156846</td>
+                            <td><a style="display:block;color: black" href="#popup"> 156846</a></td>
                             <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga!</td>
                             <td>14/08/2019</td>
                             <td>12345</td>
                         </tr>
-                    </tbody>
+                    </tbody></div>
                 </table>
             </div>
+
         </div>
+
+
+             </div>
+
+
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -172,5 +240,6 @@
             integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
             crossorigin="anonymous"></script>
 </body>
+
 
 </html>
